--- a/ward-broadcast.html
+++ b/ward-broadcast.html
@@ -2,294 +2,140 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>CivicSewa – Ward Dashboard</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>CivicSewa - Broadcast Channel</title>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
 
 <style>
-body{
-    font-family:'Inter',sans-serif;
-    background:#edf3f9;
-    margin:0;
+body {
+    margin: 0;
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #8ea9bb;
 }
 
-/* Sidebar */
-.sidebar{
-    height:100vh;
-    background:#1f4172;
-    color:white;
-    position:fixed;
-    width:240px;
-    padding-top:20px;
-}
-.sidebar h4{
-    text-align:center;
-    font-weight:700;
-}
-.sidebar a{
-    display:block;
-    color:white;
-    padding:12px 20px;
-    text-decoration:none;
-    opacity:0.85;
-    border-radius:10px;
-    margin:6px 12px;
-    transition:0.2s;
-}
-.sidebar a:hover,
-.sidebar a.active{
-    background:#1f6dff;
-    opacity:1;
+/* SIDEBAR */
+#sidebar {
+    width: 260px;
+    background-color: #2A4B79;
+    color: white;
 }
 
-/* Main */
-.main{
-    margin-left:240px;
-    padding:30px;
+#sidebar .nav-link {
+    color: #dce6f3;
+    border-radius: 10px;
+    margin-bottom: 6px;
+    padding: 10px 15px;
 }
 
-/* Topbar */
-.topbar{
-    display:flex;
-    justify-content:space-between;
-    align-items:center;
-    margin-bottom:30px;
-}
-.search input{
-    border-radius:12px;
-    border:1px solid #e2e8f0;
-    padding:10px 15px;
-}
-.ward-badge{
-    background:white;
-    padding:8px 15px;
-    border-radius:12px;
-    font-weight:600;
-    box-shadow:0 4px 12px rgba(0,0,0,0.06);
+#sidebar .nav-link:hover,
+#sidebar .nav-link.active {
+    background-color: #1d3557;
+    color: white;
 }
 
-/* KPI Cards */
-.kpi-card{
-    border-radius:20px;
-    padding:24px;
-    color:white;
-    box-shadow:0 8px 22px rgba(0,0,0,0.06);
-}
-.kpi-card h2{ font-weight:700; }
-.kpi-1{background:#2f6fed;}
-.kpi-2{background:#228b52;}
-.kpi-3{background:#ffc107;color:#222;}
-.kpi-4{background:#dc3545;}
-
-/* Cards */
-.card{
-    border:none;
-    border-radius:20px;
-    box-shadow:0 8px 22px rgba(0,0,0,0.06);
+/* CARD */
+.broadcast-card {
+    background: white;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+    position: relative;
+    transition: 0.3s ease;
 }
 
-/* Chart Fix */
-.chart-container{
-    position:relative;
-    height:220px;
+.broadcast-card:hover {
+    transform: translateY(-5px);
 }
 
-/* Status Badges */
-.status{
-    padding:6px 12px;
-    border-radius:999px;
-    font-size:12px;
-    font-weight:600;
+.broadcast-card.emergency {
+    border-left: 6px solid #e0333d;
 }
-.open{background:#dbeafe;color:#1d4ed8;}
-.progress{background:#fef3c7;color:#92400e;}
-.resolved{background:#dcfce7;color:#166534;}
 
-/* Updates */
-.update{
-    border-left:4px solid;
+.emergency-badge {
+    background: #e0333d;
+    color: white;
+    padding: 4px 12px;
+    border-radius: 20px;
+    font-size: 12px;
 }
-.water{border-color:#0d6efd;}
-.road{border-color:#dc3545;}
-.waste{border-color:#198754;}
-.general{border-color:#6f42c1;}
 
-.emergency{
-    background:white;
-    border-left:6px solid #dc2626;
-    padding:18px;
-    border-radius:20px;
-    box-shadow:0 8px 22px rgba(0,0,0,0.06);
+.delete-btn {
+    position: absolute;
+    top: 12px;
+    right: 12px;
 }
-.emergency strong{ color:#dc2626; }
-
-.table thead{ background:#f1f5f9; }
 </style>
 </head>
 
 <body>
 
-<!-- Sidebar -->
-<div class="sidebar">
-    <h4>CivicSewa</h4>
-    <a class="active">Dashboard</a>
-    <a>Complaints</a>
-    <a>Residents</a>
-    <a>Services</a>
-    <a>Reports</a>
-    <a>Settings</a>
+<div class="d-flex">
+
+<!-- SIDEBAR -->
+<div id="sidebar" class="d-flex flex-column p-3" style="position: fixed; height: 100vh;">
+    <h3 class="p-3 fw-bold">CivicSewa</h3>
+    <hr>
+    <ul class="nav nav-pills flex-column flex-grow-1">
+        <li><a href="dashboard.html" class="nav-link">Dashboard</a></li>
+        <li><a href="Broadcast.html" class="nav-link active">Broadcast Channel</a></li>
+    </ul>
+    <hr>
+    <button class="btn btn-outline-light w-100">Sign Out</button>
 </div>
 
-<div class="main">
+<!-- MAIN -->
+<div class="flex-grow-1" style="margin-left:260px; min-height:100vh;">
 
-    <!-- Topbar -->
-    <div class="topbar">
-        <div class="search">
-            <input class="form-control" placeholder="Search complaints, resident">
-        </div>
-        <div class="ward-badge">Ward 5</div>
+<nav class="navbar shadow-sm p-3" style="background:#2A4B79;color:white;">
+    <div class="container-fluid">
+        <span class="fw-bold">Ward Broadcast Channel</span>
+        <button class="btn btn-light" data-bs-toggle="modal" data-bs-target="#createModal">
+            + Create Broadcast
+        </button>
     </div>
+</nav>
 
-    <!-- KPI Row -->
-    <div class="row g-4 mb-4">
-        <div class="col-md-3">
-            <div class="kpi-card kpi-1">
-                <h2>128</h2>
-                <p>Open Complaints</p>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="kpi-card kpi-2">
-                <h2>86</h2>
-                <p>Resolved This Month</p>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="kpi-card kpi-3">
-                <h2>32</h2>
-                <p>In Progress</p>
-            </div>
-        </div>
-        <div class="col-md-3">
-            <div class="kpi-card kpi-4">
-                <h2>14</h2>
-                <p>High Priority</p>
-            </div>
-        </div>
-    </div>
-
-    <!-- Charts Row -->
-    <div class="row g-4 mb-4">
-
-        <div class="col-md-4">
-            <div class="card p-4 h-100">
-                <h6>Monthly Trends</h6>
-                <div class="chart-container">
-                    <canvas id="lineChart"></canvas>
-                </div>
-            </div>
-        </div>
-
-        <div class="col-md-4">
-            <div class="card p-4 h-100">
-                <h6>Status Distribution</h6>
-                <div class="chart-container">
-                    <canvas id="pieChart"></canvas>
-                </div>
-            </div>
-        </div>
-
-
-    </div>
-
-    <!-- Bottom Row -->
-    <div class="row g-4">
-
-        <div class="col-md-7">
-            <div class="card p-4">
-                <h5>Recent Complaints</h5>
-                <table class="table mt-3">
-                    <thead>
-                        <tr>
-                            <th>Title</th>
-                            <th>Category</th>
-                            <th>Date</th>
-                            <th>Status</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <td>Road Damage</td>
-                            <td>Road</td>
-                            <td>Feb 18</td>
-                            <td><span class="status open">Open</span></td>
-                        </tr>
-                        <tr>
-                            <td>No Water</td>
-                            <td>Water</td>
-                            <td>Feb 16</td>
-                            <td><span class="status progress">In Progress</span></td>
-                        </tr>
-                        <tr>
-                            <td>Street Light Issue</td>
-                            <td>Electricity</td>
-                            <td>Feb 14</td>
-                            <td><span class="status resolved">Resolved</span></td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-
-            <div class="emergency">
-                <strong>Emergency Alerts</strong><br>
-                Landslide reported in Tole 3<br>
-                Fire response team dispatched
-            </div>
-        </div>
-
-    </div>
-
+<div class="container-fluid p-4">
+    <div class="row g-4" id="broadcastContainer"></div>
 </div>
 
-<script>
-new Chart(document.getElementById('lineChart'),{
-    type:'line',
-    data:{
-        labels:['Jan','Feb','Mar','Apr','May','Jun'],
-        datasets:[{
-            data:[65,90,75,110,95,130],
-            borderColor:'#1f6dff',
-            backgroundColor:'rgba(31,109,255,0.15)',
-            fill:true,
-            tension:0.4
-        }]
-    },
-    options:{
-        responsive:true,
-        maintainAspectRatio:false,
-        plugins:{legend:{display:false}}
-    }
-});
+</div>
+</div>
 
-new Chart(document.getElementById('pieChart'),{
-    type:'pie',
-    data:{
-        labels:['Open','In Progress','Resolved','High Priority'],
-        datasets:[{
-            data:[128,32,86,14],
-            backgroundColor:['#2f6fed','#ffc107','#228b52','#dc3545']
-        }]
-    },
-    options:{
-        responsive:true,
-        maintainAspectRatio:false
-    }
-});
-</script>
+<!-- MODAL -->
+<div class="modal fade" id="createModal">
+<div class="modal-dialog">
+<div class="modal-content">
+
+<div class="modal-header">
+<h5 class="modal-title">Create Broadcast</h5>
+<button type="button" class="btn-close" data-bs-dismiss="modal"></button>
+</div>
+
+<div class="modal-body">
+<input id="title" class="form-control mb-3" placeholder="Title">
+<textarea id="content" class="form-control mb-3" placeholder="Content"></textarea>
+
+<div class="form-check">
+<input class="form-check-input" type="checkbox" id="emergency">
+<label class="form-check-label">Mark as Emergency</label>
+</div>
+</div>
+
+<div class="modal-footer">
+<button class="btn btn-primary" id="postBtn">Post</button>
+</div>
+
+</div>
+</div>
+</div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- 🔥 Link JS File -->
+<script type="module" src="ward-broadcast.js"></script>
 
 </body>
 </html>
