--- a/chatbot.html
+++ b/chatbot.html
@@ -7,35 +7,38 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" href="chatbot.css">
 </head>
-<body>
+<body background="white">
 
-<div class="layout-wrapper">
-    <div id="sidebar" class="sidebar">
-        <h3 class="fw-bold">CivicSewa</h3>
-        <ul class="nav flex-column mb-auto">
-            <li><a href="dashboard.html" class="nav-link"><i class="bi bi-grid-fill me-3"></i>Dashboard</a></li>
-            <li><a href="my-complaints.html" class="nav-link"><i class="bi bi-chat-left-text me-3"></i>My Complaints</a></li>
-            <li><a href="documents.html" class="nav-link"><i class="bi bi-file-earmark-text me-3"></i>Documents</a></li>
-            <li><a href="broadcast.html" class="nav-link"><i class="bi bi-broadcast me-3"></i>Broadcast Channel</a></li>
-            <li><a href="road.html" class="nav-link"><i class="bi bi-road-horizon me-3"></i>Road</a></li>
-            <li><a href="chatbot.html" class="nav-link active"><i class="bi bi-robot me-3"></i>Guidance Chatbot</a></li>
-            <li><a href="settings.html" class="nav-link"><i class="bi bi-gear me-3"></i>Settings</a></li>
+<div class="d-flex">
+    <div id="sidebar" class="d-flex flex-column p-3" style="position: fixed; height: 100vh; overflow-y: auto; background: #2A4B79; color: white;">
+        <h3 class="p-3 fw-bold">CivicSewa</h3>
+        <hr>
+        <ul class="nav nav-pills flex-column flex-grow-1" style="background-color:#2A4B79; color: white;">
+<li class="nav-item"><a href="dashboard.html" class="nav-link"><i class="bi bi-grid-1x2 me-2"></i> Dashboard</a></li>
+            <li><a href="my-complaints.html" class="nav-link"><i class="bi bi-chat-dots me-2"></i> My Complaints</a></li>
+            <li><a href="documents.html" class="nav-link"><i class="bi bi-file-earmark-pdf me-2"></i> Documents</a></li>
+            <li><a href="Broadcast.html" class="nav-link"><i class="bi bi-broadcast me-2"></i> Broadcast Channel</a></li>
+            <li><a href="#" class="nav-link"><i class="bi bi-signpost-2 me-2"></i> Road </a></li>
+            <li><a href="chatbot.html" class="nav-link active"><i class="bi bi bi-robot me-2"></i> Guidance Chatbot </a></li>
+            <li><a href="settings.html" class="nav-link"><i class="bi bi-gear me-2"></i> Settings</a></li>
+        
         </ul>
-        <div class="mt-auto">
-            <button class="btn btn-outline-light w-100 py-2">Sign Out</button>
-        </div>
+        <hr>
+        <button id="logoutBtn" class="btn btn-outline-light w-100">Sign Out</button>
     </div>
 
-    <div class="main-content">
-        <nav class="navbar top-navbar">
-            <div class="container-fluid px-0">
-                <input type="text" class="form-control" placeholder="Search...">
+
+    <div class="flex-grow-1 d-flex flex-column" style="background-color:#2A4B79;color: white; min-height: 100vh; margin-left: 210px;">
+        <nav class="navbar navbar-expand shadow-sm p-3">
+            <div class="container-fluid">
+                <input type="text" class="form-control w-25" placeholder="Search...">
                 <div class="ms-auto d-flex align-items-center">
-                    <span class="badge-ward me-3">Ward 3, Mahalaxmi</span>
-                    <span class="fw-semibold">Yureka Adhikari</span>
+                    <span class="badge bg-primary me-3" id="uWard">Ward --</span>
+                    <strong id="uNameTop">User Name</strong>
                 </div>
             </div>
         </nav>
+
 
         <div class="chat-container-padding">
             <div class="chat-wrapper">
